# uned_kheperaIV_ros_pkg

./: .gitignore  LICENSE  README.md
ESP32-SerialCOM/: platformio.ini
arduino-khepera-uROS/: platformio.ini
doc/: README.md  doc.tex  refs.bib
scripts/: bag2csv_khepera.py  client.py  prog-template.c  server.c
scripts/Matlab/: KheperaIV_Launch.m  KheperaIV_Model.m  KheperaIV_Model_K&D.slx
uned_kheperaIV_config/: CMakeLists.txt  package.xml
uned_kheperaIV_controllers/: CMakeLists.txt  package.xml
uned_khepera_description/: CMakeLists.txt  package.xml
uned_khepera_description/launch/: urdf_visualize.launch.py
uned_khepera_description/meshes/: model.config  model.sdf
uned_khepera_description/rviz/: urdf_simple.rviz
uned_khepera_description/urdf/: khepera.urdf  khepera.xml  khepera_simple.urdf
uned_khepera_gazebo/: CMakeLists.txt  package.xml
uned_khepera_gazebo/launch/: demo_formation_Gazebo.launch.py  (+2 more)
uned_kheperaiv_config/: CMakeLists.txt  package.xml
uned_kheperaiv_controllers/: CMakeLists.txt  package.xml
uned_kheperaiv_controllers/include/uned_kheperaiv_controllers/: KheperaEventTriggering.hpp  KheperaPositionController.hpp
uned_kheperaiv_controllers/src/: event_triggering.cpp  eventbased_pid_position_controller.cpp  periodic_pid_position_controller.cpp
uned_kheperaiv_driver/: package.xml  setup.cfg  setup.py
uned_kheperaiv_gui/: package.xml  setup.cfg  setup.py
uned_kheperaiv_task/: package.xml  setup.cfg  setup.py
uned_kheperaiv_webots/: package.xml  setup.cfg  setup.py
uned_vicon_gazebo/: package.xml  setup.cfg  setup.py
(+112 files in other folders)
